solve stretch-link over scope problem
commit by cham

--- a/src/css/component/platformTrigger.style.css
+++ b/src/css/component/platformTrigger.style.css
@@ -15,7 +15,6 @@
   width: 810px;
   padding: 5px 0;
   border-radius: 6px;
-  background-color: white;
 
   /* Position the tooltip text - see examples below! */
   position: absolute;
